--- a/.github/workflows/tmate.yml
+++ b/.github/workflows/tmate.yml
@@ -4,6 +4,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 1
     steps:
     - uses: actions/checkout@v1
     - name: Setup tmate session
